tests/errors/string_01.py
def test_tuple_indicing_in_str():
    x: str = "abcdefgh"
    print(x[2, 5])


test_tuple_indicing_in_str()
